# research-agent-reAct

./: .env.example  README.md  main.py  pyproject.toml
src/research_agent/: __init__.py
src/research_agent/core/: __init__.py  agent.py  models.py
src/research_agent/llm/: Notes_LLM_client(anthropic sdk).py  __init__.py  client.py
src/research_agent/tools/: __init__.py  web_search.py
src/research_agent/utils/: __init__.py  helpers.py
